# curve_editor

./: .gitignore  README.md  main.py  pyproject.toml  styles.css
app/: controlPanel.py  main.py
app/results/: parse.py
