[tool.poetry]
name = "app"
version = "0.1.0"
description = "Curve editor that can draw and edit cubic splines and bezier curves."
authors = ["Mikolkar <mikolaj.karapka@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
PyQt6 = "^6.6.1"
matplotlib = "^3.8.3"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
project = "app.main:main"